# ProyectoProg3

./: CMakeLists.txt  README.md  main  main.cpp
CSV/: Inventariado_Fisico.csv  prueba.csv
Estructuras/: ArbolAVL.h  ProcesadorArgumentos.h  leerCSV.h  stock.h
